Second Commit, turn off javascript

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             <p class="text-description fs-5">Restaurant that wants to market its new menu for higher profit</p>
                             <a href="https://ivanverdyansyahh.github.io/vegans.github.io/" class="text-link text-decoration-none fs-6 p-3 py-2 mt-2">Visit Website</a>
                         </div>
-                        <div class="section-overlay" id="landing-food&drink">
+                        <!-- <div class="section-overlay" id="landing-food&drink">
                             <div class="card-content">
                                 <a class="close text-decoration-none d-inline-block px-3 p-1">
                                     <i class="fa-solid fa-xmark"></i>
@@ -222,7 +222,7 @@
                                 <img src="img/landing_page-food&drink.png" class="landing-fooddrink img-fluid m-4 mx-5 shadow-lg" alt="Project Landing Page Food & Drink">
                                 <span class="text-overlay py-4"><small>Landing Page | Food & Drink - Vegans</small></span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
